# basis

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: basis.yaml
examples/core/: Cargo.toml
examples/core/src/: lib.rs
examples/engine/: CMakeLists.txt  engine.cpp
src/: cli.rs  config.rs  display.rs  git.rs  gpg.rs  install.rs  main.rs  runner.rs  status.rs  update.rs  verify.rs
src/version/: cpp.rs  mod.rs  rust.rs
